<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.szfp.biometric.MainActivity">

    <LinearLayout
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/cadetblue"
                android:text="@string/name"/>
            <EditText
                android:layout_marginStart="10dp"
                android:id="@+id/et_name"
                android:ems="8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_finger"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/space_5"
            android:background="@mipmap/ic_no_data"
            android:padding="@dimen/space_5"
            android:contentDescription="@string/todo" />



    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/bt_save"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_the_information"/>
        <Button
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_fingerprints"/>
        <Button
            android:id="@+id/bt_clear_the"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_the_fingerprints"/>
        <Button
            android:id="@+id/bt_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finding_user_information"/>
        <Button
            android:id="@+id/bt_clear_all"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_all_data"/>


    </LinearLayout>



</LinearLayout>
